--- a/UNDBsh/website/templates/website/baseuser.html
+++ b/UNDBsh/website/templates/website/baseuser.html
@@ -282,7 +282,7 @@
                 <div class=" card-header py-3 d-flex flex-row  justify-content-between">
 
                   <h6 class="m-0 font-weight-bold text-dark">Fila de atendimento</h6>
-                  <h6 class="text-left m-0 font-weight-bold text-dark"> <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">Ver mais</button></h6>
+                  <h6 class="text-left m-0 font-weight-bold text-dark"> <button type="text" data-toggle="modal" data-target="#exampleModalLong" style="background: none; border: none;">Ver mais</button></h6>
                   <p></p>
 
                 </div>
