--- a/UNDBsh/website/templates/website/baseuser.html
+++ b/UNDBsh/website/templates/website/baseuser.html
@@ -294,6 +294,7 @@
                         <th scope="col">Paciente</th>
                         <th scope="col">Tipo de atendimento</th>
                         <th scope="col">Aluno</th>
+                        <th scope="col">Ações</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -302,18 +303,30 @@
                         <td>Mark</td>
                         <td>Extração</td>
                         <td>Aluno 1</td>
+                        <td><a class="btn btn-success btn-xs" href="">Visualizar</a>
+                          <a class="btn btn-warning btn-xs" href="">Editar</a>
+                          <a class="btn btn-danger btn-xs" href="#" data-toggle="modal" data-target="#delete-modal">Excluir</a>
+                        </td>
                       </tr>
                       <tr>
                         <th scope="row">2</th>
                         <td>Jacob</td>
                         <td>Obturação</td>
                         <td>Aluno 2</td>
+                        <td><a class="btn btn-success btn-xs" href="">Visualizar</a>
+                          <a class="btn btn-warning btn-xs" href="">Editar</a>
+                          <a class="btn btn-danger btn-xs" href="#" data-toggle="modal" data-target="#delete-modal">Excluir</a>
+                        </td>
                       </tr>
                       <tr>
                         <th scope="row">3</th>
                         <td>Larry</td>
                         <td>Canal</td>
                         <td>Aluno 3</td>
+                        <td><a class="btn btn-success btn-xs" href="">Visualizar</a>
+                          <a class="btn btn-warning btn-xs" href="">Editar</a>
+                          <a class="btn btn-danger btn-xs" href="#" data-toggle="modal" data-target="#delete-modal">Excluir</a>
+                        </td>
                       </tr>
                     </tbody>
                   </table>
@@ -370,6 +383,7 @@
                   <td>Mark</td>
                   <td>Extração</td>
                   <td>Aluno 1</td>
+
                 </tr>
                 <tr>
                   <th scope="row">2</th>
